--- a/comandos git/index.html
+++ b/comandos git/index.html
@@ -18,9 +18,17 @@
         <p>git push -u origin main</p>
         <p>git log --oneline -p --graph</p>
         <p>git branch "nome do branch"</p>
+        <p>git checkout nome do branch</p>
+        <p>git checkout id</p>
+        <p>git switch -c</p>
         <p>git revert id</p>
         <p>git reset --hard id</p>
         <p>git commit --amend -m "novo nome do commit"</p>
+        <p>show id</p>
+        <p>git diff</p>
+        <p>git pull</p>
+        <p>git merge id</p>
+        <p>git rebase id</p>
     </div>
 </body>
 </html>
