--- a/comandos git/index.html
+++ b/comandos git/index.html
@@ -20,6 +20,7 @@
         <p>git branch "nome do branch"</p>
         <p>git checkout nome do branch</p>
         <p>git checkout id</p>
+        <p>git head^</p>
         <p>git switch -c</p>
         <p>git revert id</p>
         <p>git reset --hard id</p>
@@ -29,6 +30,7 @@
         <p>git pull</p>
         <p>git merge id</p>
         <p>git rebase id</p>
+        <p>git tag v1 id</p>
     </div>
 </body>
 </html>
