--- a/comandos git/index.html
+++ b/comandos git/index.html
@@ -27,7 +27,7 @@
         <p>git commit --amend -m "novo nome do commit"</p>
         <p>show id</p>
         <p>git diff</p>
-        <p>git pull</p>
+        <p>git pull --rebase</p>
         <p>git merge id</p>
         <p>git rebase id</p>
         <p>git tag v1 id</p>
