--- a/comandos git/index.html
+++ b/comandos git/index.html
@@ -29,7 +29,7 @@
         <p>git diff</p>
         <p>git pull --rebase</p>
         <p>git merge id</p>
-        <p>git rebase id</p>
+        <p>git rebase id --continue</p>
         <p>git tag v1 id</p>
     </div>
 </body>
