--- a/comandos git/index.html
+++ b/comandos git/index.html
@@ -12,10 +12,13 @@
         <p>ssh-keygen -t ed25519 -C "email"</p>
         <p>git init</p>
         <p>git add .</p>
-        <p>git commit -m "texto"</p>
+        <p>git commit -m "texto" --amend -m </p>
         <p>git branch -M main</p>
         <p>git remote add origin git@github.com:okabeHintaro/repository</p>
+        <p>git ignore .io</p>
+        <p>git pull --rebase</p>
         <p>git push -u origin main</p>
+        <p>gist</p>
         <p>git log --oneline -p --graph</p>
         <p>git branch "nome do branch"</p>
         <p>git checkout nome do branch</p>
@@ -27,7 +30,6 @@
         <p>git commit --amend -m "novo nome do commit"</p>
         <p>show id</p>
         <p>git diff</p>
-        <p>git pull --rebase</p>
         <p>git merge id</p>
         <p>git rebase id --continue</p>
         <p>git tag v1 id</p>
