--- a/comandos git/index.html
+++ b/comandos git/index.html
@@ -11,8 +11,10 @@
         <p>git config --global user.email "email", user.name "name"</p>
         <p>ssh-keygen -t ed25519 -C "email"</p>
         <p>git init</p>
+        <p>git switch -c</p>
         <p>git add .</p>
         <p>git commit -m "texto" --amend -m </p>
+        <p>git diff id..id</p>
         <p>git branch -M main</p>
         <p>git remote add origin git@github.com:okabeHintaro/repository</p>
         <p>git ignore .io</p>
@@ -24,13 +26,11 @@
         <p>git checkout nome do branch</p>
         <p>git checkout id</p>
         <p>git head^</p>
-        <p>git switch -c</p>
         <p>git revert id</p>
         <p>git reset --hard id</p>
         <p>git commit --amend -m "novo nome do commit"</p>
         <p>show id</p>
-        <p>git diff</p>
-        <p>git merge id</p>
+        <p>git merge branch origin/branch</p>
         <p>git rebase id --continue</p>
         <p>git tag v1 id</p>
     </div>
