--- a/comandos git/index.html
+++ b/comandos git/index.html
@@ -11,7 +11,9 @@
         <p>git config --global user.email "email", user.name "name"</p>
         <p>ssh-keygen -t ed25519 -C "email"</p>
         <p>git init</p>
+        <p>git branch "nome do branch"</p>
         <p>git switch -c</p>
+        <p>git stach push -m "" pop apply i</p>
         <p>git add .</p>
         <p>git commit -m "texto" --amend -m </p>
         <p>git diff id..id</p>
@@ -19,10 +21,10 @@
         <p>git remote add origin git@github.com:okabeHintaro/repository</p>
         <p>git ignore .io</p>
         <p>git pull --rebase</p>
-        <p>git push -u origin main</p>
+        <p>git rebase id --continue</p>
+        <p>git push -u origin: main</p>
         <p>gist</p>
         <p>git log --oneline -p --graph</p>
-        <p>git branch "nome do branch"</p>
         <p>git checkout nome do branch</p>
         <p>git checkout id</p>
         <p>git head^</p>
@@ -31,8 +33,8 @@
         <p>git commit --amend -m "novo nome do commit"</p>
         <p>show id</p>
         <p>git merge branch origin/branch</p>
-        <p>git rebase id --continue</p>
         <p>git tag v1 id</p>
+        <p>git restore .</p>
     </div>
 </body>
 </html>
