--- a/comandos git/index.html
+++ b/comandos git/index.html
@@ -33,8 +33,10 @@
         <p>git commit --amend -m "novo nome do commit"</p>
         <p>show id</p>
         <p>git merge branch origin/branch</p>
-        <p>git tag v1 id</p>
+        <p>git tag -a v id -m "" -d -v</p>
+        <p>git push --tags</p>
         <p>git restore .</p>
+        <p>git cherry-pick id</p>
     </div>
 </body>
 </html>
